--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -37,6 +37,7 @@ blocks {
     B:path=true
     B:projector=true
     B:ropeladder=true
+    B:scaffolding=true
     B:sky=true
     B:sponge=true
     B:sprinkler=true
@@ -99,13 +100,16 @@ dropblock {
     # Does the elevator drain player XP when used?
     B:elevatorDrainsXP=false
 
+    # Disable limit of blocks between elevators (equivalent to maxPassThrough = infinity)
+    B:ignoreAllBlocks=false
+
     # The elevator will ignore half blocks when counting the blocks it can pass through
     B:ignoreHalfBlocks=false
 
     # The elevator will try to pass through blocks that have custom collision boxes
     B:irregularBlocksArePassable=true
 
-    # The maximum amount of blocks the elevator can pass through before the teleport fails. -1 disables this
+    # The maximum amount of blocks the elevator can pass through before the teleport fails
     I:maxPassThrough=4
 
     # The range of the drop block
@@ -147,6 +151,9 @@ features {
 
     # Id of liquid XP fluid (WARNING: only for users who know what they are doing - changing this id can break worlds
     S:xpFluidId=xpjuice
+
+    # Storage in mB needed to store single XP point
+    I:xpToLiquidRatio=20
 }
 
 
@@ -160,6 +167,9 @@ glasses {
 
 
 graves {
+    # Can grave spawn single block of dirt when it has no block under?
+    B:canSpawnBase=true
+
     # Try to overwrite blocks with graves if no suitable place is found on first try
     B:destructiveGraves=false
 
@@ -177,6 +187,9 @@ graves {
 
     # Store contents of spawned graves into separate NBT files (can later be restored with ob_inventory command)
     B:storeContents=true
+
+    # Should grave try to spawn when player died by falling into void? (false -> legacy behaviour)
+    B:voidFix=true
 }
 
 
@@ -248,6 +261,12 @@ radio {
 
     # Should tuned crystals sell records too
     B:radioVillagerSellsRecords=true
+}
+
+
+scaffolding {
+    # The rate at which scaffolding should break. 0 - fastest
+    I:despawnRate=4
 }
 
 
