--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -63,8 +63,15 @@ modules {
     B:tcon.searedtank=true
     B:tcon.smeltery=true
     B:tcon.table=true
+    B:thermalexpansion.cache=true
+    B:thermalexpansion.energycell=true
     B:thermalexpansion.energyhandler=true
+    B:thermalexpansion.fluidamount=true
+    B:thermalexpansion.fluidtype=true
     B:thermalexpansion.owner=true
+    B:thermalexpansion.tankmode=true
+    B:thermalexpansion.tessfreq=true
+    B:thermalexpansion.tesssendrecv=true
     B:tseelworks.autoUnit=true
     B:tseelworks.listFluids=true
     B:tseelworks.showTotal=true
@@ -121,8 +128,15 @@ server_forcing {
     B:tcon.searedtank=false
     B:tcon.smeltery=false
     B:tcon.table=false
+    B:thermalexpansion.cache=false
+    B:thermalexpansion.energycell=false
     B:thermalexpansion.energyhandler=false
+    B:thermalexpansion.fluidamount=false
+    B:thermalexpansion.fluidtype=false
     B:thermalexpansion.owner=false
+    B:thermalexpansion.tankmode=false
+    B:thermalexpansion.tessfreq=false
+    B:thermalexpansion.tesssendrecv=false
     B:tseelworks.autoUnit=false
     B:tseelworks.listFluids=false
     B:tseelworks.showTotal=false
