--- a/config/bbm/ve/HeatMap.cfg
+++ b/config/bbm/ve/HeatMap.cfg
@@ -64,35 +64,15 @@ heat_conversions {
 
     #  [default: minecraft:air]
     S:"EnderIO:blockPaintedFenceGate"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"EnderZoo:blockConcussionCharge"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"EnderZoo:blockConfusingCharge"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"EnderZoo:blockEnderCharge"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"ExtraUtilities:colorWoodPlanks"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"ExtraUtilities:curtains"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"ExtraUtilities:greenscreen"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"ExtraUtilities:peaceful_table_top"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"ExtraUtilities:sound_muffler"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"ExtraUtilities:spike_base_wood"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"ExtraUtilities:trading_post"=minecraft:air
 
     #  [default: minecraft:air]
@@ -150,6 +130,9 @@ heat_conversions {
     S:"OpenBlocks:ladder"=minecraft:air
 
     #  [default: minecraft:air]
+    S:"OpenBlocks:scaffolding"=minecraft:air
+
+    #  [default: minecraft:air]
     S:"TConstruct:Armor.DryingRack"=minecraft:air
 
     #  [default: minecraft:air]
@@ -169,8 +152,6 @@ heat_conversions {
 
     #  [default: minecraft:air]
     S:"TConstruct:Redstone.Landmine"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"TConstruct:TankAir"=minecraft:air
 
     #  [default: minecraft:air]
@@ -289,68 +270,26 @@ heat_conversions {
 
     #  [default: minecraft:air]
     S:"chisel:valentines"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:armorBox.EnKCT.ArmourBox"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:armorBox.mwArmour"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:armorBox.ww2Armour"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.BananaBox"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.ChemicalCrate"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.EnKCT.Box"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.Missiles"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.NatoBox"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.PaPmech"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.T80Friend"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.american"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.british"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.cavalry"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.german"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.japanese"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.mi6"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.modern"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.russian"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.unclearChemistry"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.vehicleBox"=minecraft:air
-
-    #  [default: minecraft:air]
     S:"flansmod:gunBox.zombieBox"=minecraft:air
 
     #  [default: minecraft:air]
