--- a/config/enderio/EnderIO.cfg
+++ b/config/enderio/EnderIO.cfg
@@ -136,6 +136,21 @@
     # Amount of power stored by dark steel items with a level 2 upgrade.
     I:darkSteelPowerStorageLevelTwo=250000
 
+    # The increase in effected area (radius) when powered and used on blocks.
+    I:darkSteelShearsBlockAreaBoostWhenPowered=2
+
+    # How much more durable as vanilla shears they are.
+    I:darkSteelShearsDurabilityFactor=5
+
+    # The increase in efficiency when powered.
+    D:darkSteelShearsEffeciencyBoostWhenPowered=2.0
+
+    # The increase in effected area (radius) when powered and used on sheep.
+    D:darkSteelShearsEntityAreaBoostWhenPowered=3.0
+
+    # Power use (RF) per damage/durability point avoided.
+    I:darkSteelShearsPowerUsePerDamagePoint=250
+
     # If enabled allows the solar upgrade to charge non-darksteel armors that the player is wearing.
     B:darkSteelSolarChargeOthers=true
 
@@ -300,11 +315,13 @@ enchantments {
 
     # The id of the enchantment. If set to -1 the lowest unassigned id will be used.
     I:enchantmentSoulBoundId=-1
+
+    # The chance of getting this enchantment in the enchantment table
+    I:enchantmentSoulBoundWeight=1
 }
 
 
 enchantmentsoulboundweight {
-    # The chance of getting this enchantment in the enchantment table
     I:Enchantments=1
 }
 
@@ -321,6 +338,12 @@ enchantmentsoulboundweight {
 
     # Should axes in a farm take damage when breaking leaves?
     B:farmAxeDamageOnLeafBreak=false
+
+    # The amount of power used by a farm per bone meal used
+    I:farmBonemealActionEnergyUseRF=160
+
+    # The amount of power used by a farm per bone meal try
+    I:farmBonemealTryEnergyUseRF=80
 
     # The amount of power used by a farm per tick 
     I:farmContinuousEnergyUseRF=40
@@ -371,6 +394,9 @@ enchantmentsoulboundweight {
     # This setting controls whether mana beans from Thaumcraft can be harvested by the farm.
     B:farmManaBeansEnabled=false
 
+    # The amount of saplings the farm has to have in reserve to switch to shearing all leaves. If there are less saplings in store, it will only shear part the leaves and break the others for spalings. Set this to 0 to always shear all leaves.
+    I:farmSaplingReserveAmount=8
+
     # The chance that a tool in the farm will take damage.
     D:farmToolTakeDamageChance=1.0
 }
@@ -386,7 +412,10 @@ enchantmentsoulboundweight {
     # Allows ME conduits. Only has an effect with AE2 installed. [default: true]
     B:enableMEConduits=true
 
-    # Can be set to 'auto', 'true' or 'false'. When set to auto the gas conduit will only be enabled when Mekanism is installed. [default: auto]
+    # If true, gas conduits will be enabled if the Mekanism Gas API is found. False to forcibly disable. [default: true]
+    B:gasConduitEnabled=true
+
+    # Deprecated option. Use boolean "gasConduitsEnabled" below. [default: auto]
     S:isGasConduitEnabled=auto
 
     # If set to false: Photovoltaic Cells will not be craftable.
@@ -476,6 +505,13 @@ enchantmentsoulboundweight {
 
 
 "magnet settings" {
+    # These items will not be picked up by the magnet. [default: [appliedenergistics2:item.ItemCrystalSeed], [Botania:livingrock], [Botania:manaTablet]]
+    S:magnetBlacklist <
+        appliedenergistics2:item.ItemCrystalSeed
+        Botania:livingrock
+        Botania:manaTablet
+     >
+
     # Amount of RF power stored in a fully charged magnet
     I:magnetPowerCapacityRF=100000
 
@@ -708,6 +744,8 @@ misc {
 
     # The number of levels it costs to add a broken spawner
     I:powerSpawnerAddSpawnerCost=30
+
+    # Number of seconds in which spawned entities are protected from despawning
     I:poweredSpawnerDespawnTimeSeconds=120
 
     # RF per tick for a level 1 (non-upgraded) spawner. See PoweredSpanerConfig_Core.json for mob type multipliers
@@ -877,12 +915,32 @@ replacewitherskeletons {
 }
 
 
+telepad {
+    # If true, the coordinates cannot be set via the GUI, the coord selector must be used.
+    B:lockCoords=true
+
+    # If true, the dimension cannot be set via the GUI, the coord selector must be used.
+    B:lockDimension=true
+}
+
+
 weather {
+    # The item required to set the world to clear weather.
     S:weatherObeliskClearItem=minecraft:cake
+
+    # The power required to set the world to clear weather
     I:weatherObeliskClearPower=1000000
+
+    # The item required to set the world to rainy weather.
     S:weatherObeliskRainItem=minecraft:water_bucket
+
+    # The power required to set the world to rainy weather
     I:weatherObeliskRainPower=250000
+
+    # The item required to set the world to thundering weather.
     S:weatherObeliskThunderItem=minecraft:lava_bucket
+
+    # The power required to set the world to thundering weather
     I:weatherObeliskThunderPower=500000
 }
 
