--- a/config/mystcraft/core.cfg
+++ b/config/mystcraft/core.cfg
@@ -76,6 +76,11 @@ balance {
     S:fluid.ender.instability.factor_flat=
     S:fluid.ender.rarity=
     S:fluid.ender.seabanned=
+    S:fluid.enderium.molten.cardrank=
+    S:fluid.enderium.molten.grammar=
+    S:fluid.enderium.molten.instability.factor_accessibility=
+    S:fluid.enderium.molten.instability.factor_flat=
+    S:fluid.enderium.molten.seabanned=
     S:fluid.fire_water.grammar=
     S:fluid.fire_water.instability.factor_accessibility=
     S:fluid.fire_water.instability.factor_flat=
@@ -297,6 +302,9 @@ general {
     B:options.linkbook.enabled=true
     B:options.notebook.enabled=true
     B:options.portfolio.enabled=true
+
+    # If set to true this will prevent clients from connecting while baseline profiling is ongoing (Only works on dedicated servers)
+    B:options.profiling.baseline.disconnectclients=false
     I:options.providerId=1210950779
     B:options.receptacle.enabled=true
     B:options.renderlabels=false
