--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -140,6 +140,7 @@ symbol {
     B:modmat_tile.fluid.molten.cobalt.enabled=false
     B:modmat_tile.fluid.molten.copper.enabled=false
     B:modmat_tile.fluid.molten.electrum.enabled=false
+    B:modmat_tile.fluid.molten.enderium.enabled=true
     B:modmat_tile.fluid.molten.glass.enabled=false
     B:modmat_tile.fluid.molten.gold.enabled=false
     B:modmat_tile.fluid.molten.invar.enabled=false
@@ -189,6 +190,7 @@ symbol {
     B:modmat_tile.oreredstone.enabled=true
     B:modmat_tile.railcraft.fluid.creosote.enabled=false
     B:modmat_tile.railcraft.fluid.steam.enabled=false
+    B:modmat_tile.sandstone.default.enabled=true
     B:modmat_tile.snow.enabled=true
     B:modmat_tile.stone.enabled=true
     B:modmat_tile.thermalfoundation.fluid.coal.enabled=false
