--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -237,6 +237,10 @@ chisel {
     B:andesite=true
     B:andesite.1=true
     B:andesite.2=true
+    B:andesite.3=true
+    B:andesite.4=true
+    B:andesite.5=true
+    B:andesite.6=true
     B:antiBlock=true
     B:antiBlock.1=true
     B:antiBlock.10=true
@@ -403,6 +407,10 @@ chisel {
     B:diorite=true
     B:diorite.1=true
     B:diorite.2=true
+    B:diorite.3=true
+    B:diorite.4=true
+    B:diorite.5=true
+    B:diorite.6=true
     B:dirt=true
     B:dirt.1=true
     B:dirt.10=true
@@ -443,6 +451,10 @@ chisel {
     B:factoryblock.7=true
     B:factoryblock.8=true
     B:factoryblock.9=true
+    B:factoryblock2=true
+    B:factoryblock2.1=true
+    B:factoryblock2.2=true
+    B:factoryblock2.3=true
     B:fantasyblock=true
     B:fantasyblock.1=true
     B:fantasyblock.10=true
@@ -494,6 +506,7 @@ chisel {
     B:glass.7=true
     B:glass.8=true
     B:glass.9=true
+    B:glass2=true
     B:glasspane.1=false
     B:glasspane.12=false
     B:glasspane.13=false
@@ -517,6 +530,12 @@ chisel {
     B:glowstone.7=true
     B:glowstone.8=true
     B:glowstone.9=true
+    B:gold2=true
+    B:gold2.1=true
+    B:gold2.2=true
+    B:gold2.3=true
+    B:gold2.4=true
+    B:gold2.5=true
     B:goldblock.1=true
     B:goldblock.10=true
     B:goldblock.11=true
@@ -534,6 +553,10 @@ chisel {
     B:granite=true
     B:granite.1=true
     B:granite.2=true
+    B:granite.3=true
+    B:granite.4=true
+    B:granite.5=true
+    B:granite.6=true
     B:grimstone=true
     B:grimstone.1=true
     B:grimstone.10=true
@@ -549,6 +572,22 @@ chisel {
     B:grimstone.7=true
     B:grimstone.8=true
     B:grimstone.9=true
+    B:hexLargePlating=true
+    B:hexLargePlating.1=true
+    B:hexLargePlating.10=true
+    B:hexLargePlating.11=true
+    B:hexLargePlating.12=true
+    B:hexLargePlating.13=true
+    B:hexLargePlating.14=true
+    B:hexLargePlating.15=true
+    B:hexLargePlating.2=true
+    B:hexLargePlating.3=true
+    B:hexLargePlating.4=true
+    B:hexLargePlating.5=true
+    B:hexLargePlating.6=true
+    B:hexLargePlating.7=true
+    B:hexLargePlating.8=true
+    B:hexLargePlating.9=true
     B:hexPlating=true
     B:hexPlating.1=true
     B:hexPlating.10=true
@@ -617,6 +656,12 @@ chisel {
     B:icestairs6.8=false
     B:icestairs7=false
     B:icestairs7.8=false
+    B:iron2=true
+    B:iron2.1=true
+    B:iron2.2=true
+    B:iron2.3=true
+    B:iron2.4=true
+    B:iron2.5=true
     B:ironbars.1=false
     B:ironbars.2=false
     B:ironbars.3=false
@@ -876,6 +921,11 @@ chisel {
     B:mossytempleblock.7=true
     B:mossytempleblock.8=true
     B:mossytempleblock.9=true
+    B:nation=true
+    B:nation.1=true
+    B:nation.2=true
+    B:nation.3=true
+    B:nation.4=true
     B:netherbrick.1=true
     B:netherbrick.10=true
     B:netherbrick.11=true
@@ -1010,6 +1060,11 @@ chisel {
     B:pumpkin7=false
     B:pumpkin8=false
     B:pumpkin9=false
+    B:rebel=true
+    B:rebel.1=true
+    B:rebel.2=true
+    B:rebel.3=true
+    B:rebel.4=true
     B:redstoneblock.1=true
     B:redstoneblock.10=true
     B:redstoneblock.11=true
@@ -1247,12 +1302,16 @@ chisel {
     B:steelblock.3=true
     B:steelblock.4=true
     B:steelblock.5=true
+    B:stonebricksmooth=true
+    B:stonebricksmooth.1=true
     B:stonebricksmooth.10=true
     B:stonebricksmooth.11=true
     B:stonebricksmooth.12=true
     B:stonebricksmooth.13=true
     B:stonebricksmooth.14=true
     B:stonebricksmooth.15=true
+    B:stonebricksmooth.2=true
+    B:stonebricksmooth.3=true
     B:stonebricksmooth.4=true
     B:stonebricksmooth.5=true
     B:stonebricksmooth.6=true
@@ -1285,6 +1344,8 @@ chisel {
     B:technical2.1=true
     B:technical2.2=true
     B:technical2.3=true
+    B:technical3=true
+    B:technical3.1=true
     B:templeblock=true
     B:templeblock.1=true
     B:templeblock.10=true
@@ -1341,6 +1402,14 @@ chisel {
     B:uraniumblock.5=true
     B:valentines=true
     B:valentines.1=true
+    B:valentines.2=true
+    B:valentines.3=true
+    B:valentines.4=true
+    B:valentines.5=true
+    B:valentines.6=true
+    B:valentines.7=true
+    B:valentines.8=true
+    B:valentines.9=true
     B:voidstone=true
     B:voidstone.1=true
     B:voidstone.2=true
@@ -1359,6 +1428,21 @@ chisel {
     B:voidstone2.7=true
     B:voidstonePillar=true
     B:voidstonePillar2=true
+    B:voidstoneRunic.1=true
+    B:voidstoneRunic.10=true
+    B:voidstoneRunic.11=true
+    B:voidstoneRunic.12=true
+    B:voidstoneRunic.13=true
+    B:voidstoneRunic.14=true
+    B:voidstoneRunic.15=true
+    B:voidstoneRunic.2=true
+    B:voidstoneRunic.3=true
+    B:voidstoneRunic.4=true
+    B:voidstoneRunic.5=true
+    B:voidstoneRunic.6=true
+    B:voidstoneRunic.7=true
+    B:voidstoneRunic.8=true
+    B:voidstoneRunic.9=true
     B:warningSign=true
     B:warningSign.1=true
     B:warningSign.10=true
@@ -1513,6 +1597,8 @@ extracells {
     B:certustank=false
     B:ecbaseblock=false
     B:fluidcrafter=false
+    B:hardmedrive=false
+    B:vibrantchamberfluid=false
     B:walrus=false
 }
 
@@ -2409,6 +2495,7 @@ mekanismgenerators {
     B:Reactor=false
     B:Reactor.1=false
     B:Reactor.3=false
+    B:Reactor.4=false
     B:ReactorGlass=false
     B:ReactorGlass.1=false
 }
@@ -2737,6 +2824,7 @@ openblocks {
     B:path=false
     B:projector=false
     B:ropeladder=false
+    B:scaffolding=false
     B:sky=false
     B:sponge=false
     B:sprinkler=false
@@ -3479,16 +3567,20 @@ tconstruct {
     B:fluidmoltencobalt=false
     B:fluidmoltencopper=false
     B:fluidmoltenelectrum=false
+    B:fluidmoltenenderium=false
     B:fluidmoltenglass=false
     B:fluidmoltengold=false
     B:fluidmolteninvar=false
     B:fluidmolteniron=false
     B:fluidmoltenlead=false
+    B:fluidmoltenlumium=false
     B:fluidmoltenmanyullyn=false
+    B:fluidmoltenmithril=false
     B:fluidmoltennickel=false
     B:fluidmoltenobsidian=false
     B:fluidmoltenpigiron=false
     B:fluidmoltenshiny=false
+    B:fluidmoltensignalum=false
     B:fluidmoltensilver=false
     B:fluidmoltensteel=false
     B:fluidmoltentin=false
@@ -3569,6 +3661,7 @@ thermalexpansion {
     B:Frame.8=false
     B:Frame.9=false
     B:Glass=false
+    B:Glass.1=false
     B:Light=false
     B:Light.1=false
     B:Light.2=false
