--- a/config/AppliedEnergistics2/VersionChecker.cfg
+++ b/config/AppliedEnergistics2/VersionChecker.cfg
@@ -3,7 +3,7 @@
 cache {
     # Waits as many hours, until it checks again. [range: 0 ~ 168, default: 24]
     I:interval=24
-    S:lastCheck=1428811447095
+    S:lastCheck=1429208173369
 }
 
 
@@ -24,7 +24,7 @@ client {
 
 general {
     # If true, the version checker is enabled. Acts as a master switch. [default: true]
-    B:enabled=false
+    B:enabled=true
 }
 
 
