--- a/config/cofh/thermalexpansion/florbs.cfg
+++ b/config/cofh/thermalexpansion/florbs.cfg
@@ -7,10 +7,12 @@ General {
 
 
 Whitelist {
+    B:aluminiumbrass.molten=true
     B:aluminum.molten=true
     B:aluminumbrass.molten=true
     B:alumite.molten=true
     B:ardite.molten=true
+    B:bacterialsludge=true
     B:blood=true
     B:bronze.molten=true
     B:cement.liquid=true
@@ -22,7 +24,9 @@ Whitelist {
     B:electrum.molten=true
     B:emerald.liquid=true
     B:ender=true
+    B:enderium.molten=true
     B:fire_water=true
+    B:fuel=true
     B:glass.molten=true
     B:glowstone=true
     B:glue=true
@@ -43,19 +47,23 @@ Whitelist {
     B:lava=true
     B:lead.molten=true
     B:limestone.molten=true
+    B:lumium.molten=true
     B:maddna=false
     B:maddnamutant=false
     B:mana=true
     B:manyullyn.molten=true
+    B:mithril.molten=true
     B:myst.ink.black=true
     B:nickel.molten=true
     B:nutrient_distillation=true
     B:obsidian.molten=true
+    B:oil=true
     B:pigiron.molten=true
     B:platinum.molten=true
     B:pyrotheum=true
     B:redstone=true
     B:rocket_fuel=true
+    B:signalum.molten=true
     B:silver.molten=true
     B:slime.blue=true
     B:steam=true
