--- a/config/OpenComputers.cfg
+++ b/config/OpenComputers.cfg
@@ -679,7 +679,7 @@ opencomputers {
     # Whether to perform an update check and informing local players and OPs
     # if a new version is available (contacts Github once the first player
     # joins a server / the first map in single player is opened).
-    updateCheck=true
+    updateCheck=false
   }
 
   # Power settings, buffer sizes and power consumption.
