--- a/config/chisel.cfg
+++ b/config/chisel.cfg
@@ -175,7 +175,6 @@ features {
 general {
     # If true, you can chisel stone brick to mossy stone brick.
     B:allowBrickToMossyInChisel=true
-    B:allowCobbleToMossyInChisel=true
     B:allowSmoothStoneToStoneBricksAndBack=true
     I:amountYouGetFromFactoryBlockCrafting=32
 
@@ -249,6 +248,7 @@ hexcolors {
 
 
 tweaks {
+    # Unlocalized name of the block that, when burned, will produce concrete (examples: lightgem, stone)
     S:"concrete recipe block"=gravel
 }
 
