--- a/config/OpenComputers.cfg
+++ b/config/OpenComputers.cfg
@@ -594,7 +594,7 @@ opencomputers {
     # Whether to give a new player a free copy of the manual. This will only
     # happen one time per game, not per world, not per death. Once. If this
     # is still too much for your taste, disable it here ;-)
-    giveManualToNewPlayers=true
+    giveManualToNewPlayers=false
 
     # Whether to not show your special thinger (if you have one you know it).
     hideOwnSpecial=false
@@ -681,7 +681,7 @@ opencomputers {
     # Whether to perform an update check and informing local players and OPs
     # if a new version is available (contacts Github once the first player
     # joins a server / the first map in single player is opened).
-    updateCheck=true
+    updateCheck=false
   }
 
   # Power settings, buffer sizes and power consumption.
