--- a/config/railcraft/blocks.cfg
+++ b/config/railcraft/blocks.cfg
@@ -83,9 +83,9 @@ subblocks {
     B:lantern.stone.sandstone=true
     B:lantern.stone.sandy=true
     B:lantern.stone.stone=true
-    B:machine.alpha.anchor.admin=true
-    B:machine.alpha.anchor.personal=true
-    B:machine.alpha.anchor.world=true
+    B:machine.alpha.anchor.admin=false
+    B:machine.alpha.anchor.personal=false
+    B:machine.alpha.anchor.world=false
     B:machine.alpha.blast.furnace=true
     B:machine.alpha.coke.oven=true
     B:machine.alpha.engraving.bench=true
@@ -99,7 +99,7 @@ subblocks {
     B:machine.alpha.tank.water=true
     B:machine.alpha.trade.station=true
     B:machine.alpha.turbine=true
-    B:machine.beta.anchor.sentinel=true
+    B:machine.beta.anchor.sentinel=false
     B:machine.beta.boiler.firebox.liquid=true
     B:machine.beta.boiler.firebox.solid=true
     B:machine.beta.boiler.tank.pressure.high=true
